Versión con uso de Bootstrap

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-body {
+/* body {
     background-color: plum;
+} */
+
+#presentacion {
+    height: 88vh;
+    display: flex;
+    justify-content: start;
+    align-items: center;
 }
