--- a/style.css
+++ b/style.css
@@ -1,10 +1,77 @@
 /* body {
     background-color: plum;
 } */
+/* 
+colres
+#DEDEEA
+#BCB9D8
+#8488B5
+#98BFD0
+#78ACC1
+#61678B 
+*/
+
+* {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
 
 #presentacion {
-    height: 88vh;
+    /* height: 85vh; */
+    position: relative;
+}
+
+video {
+    /* padding-top: .5rem; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+
+#descripcion {
+    height: 95vh;
     display: flex;
     justify-content: start;
     align-items: center;
+    /* background-image: url(assets/fondo.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; */
+    z-index: 2;
+    position: relative;
+
+
+}
+
+/* #proyecto-1 {
+    background-image: url('assets/google.png');
+} */
+
+#proyecto-2 {
+    background-image: url('assets/blog.png');
+}
+
+
+.proyecto {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+
+}
+
+.text-shadow-1 {
+    text-shadow: 1px -1px 8px rgba(0, 0, 0, 1);
+}
+
+.proyecto-link {
+    text-decoration: none;
+    color: black;
 }
